[package]
name = "cboe-market-state"
version = "0.1.0"
edition = "2021"

[lib]
name = "cboe_market_state"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.27", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.6"
hashbrown = { version = "0.15.2", features = ["serde", "rayon"] }
hex = { version = "0.4.3", features = ["serde"] }
indexmap = { version = "2.7.1", features = ["rayon", "serde"] }
lazy_static = "1.5.0"
libc = "0.2.169"
log = "0.4.25"
memmap2 = "0.9.5"
num-format = "0.4.4"
ordered-float = "5.0.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.138"
strum = "0.27.1"
strum_macros = "0.27.1"

[profile.dev]
debug = true
opt-level = 1
